@@ -1,5 +1,5 @@
 /*
- *   $Id: device-bsd44.c,v 1.23 2009/06/19 07:28:06 psavola Exp $
+ *   $Id: device-bsd44.c,v 1.24 2010/01/22 12:18:21 psavola Exp $
  *
  *   Authors:
  *    Craig Metz		<cmetz@inner.net>
@@ -29,25 +29,11 @@ static uint8_t ll_prefix[] = { 0xfe, 0x80 };
 int
 setup_deviceinfo(int sock, struct Interface *iface)
 {
-	struct ifconf ifconf;
+	struct ifaddrs *addresses, *ifa;
+
 	struct ifreq ifr;
-	unsigned int nlen;
-	uint8_t *p, *end;
 	struct AdvPrefix *prefix;
 	char zero[sizeof(iface->if_addr)];
-
-	/* just allocate 8192 bytes, should be more than enough.. */
-	if (!(ifconf.ifc_buf = malloc(ifconf.ifc_len = (32 << 8))))
-	{
-		flog(LOG_CRIT, "malloc failed: %s", strerror(errno));
-		goto ret;
-	}
-
-	if (ioctl(sock, SIOCGIFCONF, &ifconf) < 0)
-	{
-		flog(LOG_ERR, "ioctl(SIOCGIFCONF) failed: %s(%d)", strerror(errno), errno);
-		goto ret;
-	}
 
  	memset(&ifr, 0, sizeof(ifr));
 	strncpy(ifr.ifr_name, iface->Name, IFNAMSIZ-1);
@@ -61,88 +47,87 @@ setup_deviceinfo(int sock, struct Interface *iface)
 	dlog(LOG_DEBUG, 3, "mtu for %s is %d", iface->Name, ifr.ifr_mtu);
 	iface->if_maxmtu = ifr.ifr_mtu;
 
-	p = (uint8_t *)ifconf.ifc_buf;
-	end = p + ifconf.ifc_len;
-	nlen = strlen(iface->Name);
-
-	while(p < end)
+	if (getifaddrs(&addresses) != 0)
 	{
-		p += IFNAMSIZ;
-		
-		if ((p + 2) >= end)
-			break;
-			
-		if ((p + *p) >= end)
-			break;
-			
-		if ((*(p + 1) == AF_LINK) &&
-		    (((struct sockaddr_dl *)p)->sdl_nlen == nlen) &&
-		    (!memcmp(iface->Name, ((struct sockaddr_dl *)p)->sdl_data, nlen)))
-		{
-		
-			if (((struct sockaddr_dl *)p)->sdl_alen > sizeof(iface->if_addr))
-			{
-				flog(LOG_ERR, "address length %d too big for",
-					((struct sockaddr_dl *)p)->sdl_alen,
-					iface->Name);
-				goto ret;
-			}
-		
-			memcpy(iface->if_hwaddr, LLADDR((struct sockaddr_dl *)p), ((struct sockaddr_dl *)p)->sdl_alen);
-			iface->if_hwaddr_len = ((struct sockaddr_dl *)p)->sdl_alen << 3;
-
-          		switch(((struct sockaddr_dl *)p)->sdl_type) {
-            		case IFT_ETHER:
-            		case IFT_ISO88023:
-            			iface->if_prefix_len = 64;
-              			break;
-            		case IFT_FDDI:
-            			iface->if_prefix_len = 64;
-              			break;
-            		default:
-            			iface->if_prefix_len = -1;
-				iface->if_maxmtu = -1;
-				break;
-          		}
-
-			dlog(LOG_DEBUG, 3, "link layer token length for %s is %d", iface->Name,
-				iface->if_hwaddr_len);
-
-			dlog(LOG_DEBUG, 3, "prefix length for %s is %d", iface->Name,
-				iface->if_prefix_len);
-
-			if (iface->if_prefix_len != -1) {
-				memset(zero, 0, ((struct sockaddr_dl *)p)->sdl_alen);
-				if (!memcmp(iface->if_hwaddr, zero, ((struct sockaddr_dl *)p)->sdl_alen))
-					flog(LOG_WARNING, "WARNING, MAC address on %s is all zero!",
-						iface->Name);
-			}
-			
-			prefix = iface->AdvPrefixList;
-			while (prefix)
-			{
-				if ((iface->if_prefix_len != -1) &&
-					(iface->if_prefix_len != prefix->PrefixLen))
-				{
-					flog(LOG_WARNING, "prefix length should be %d for %s",
-						iface->if_prefix_len, iface->Name);
- 				}
- 			
- 				prefix = prefix->next;
-			}
-          		
-          		free(ifconf.ifc_buf);
-          		return 0;
-        	}
-        
-    		p += *p;	
+		flog(LOG_ERR, "getifaddrs failed: %s(%d)", strerror(errno), errno);
+		goto ret;
 	}
+
+	for (ifa = addresses; ifa != NULL; ifa = ifa->ifa_next)
+	{
+		if (strcmp(ifa->ifa_name, iface->Name) != 0)
+			continue;
+
+		if (ifa->ifa_addr == NULL)
+			continue;
+
+		if (ifa->ifa_addr->sa_family != AF_LINK)
+			continue;
+
+		struct sockaddr_dl *dl = (struct sockaddr_dl*)ifa->ifa_addr;
+
+
+		if (dl->sdl_alen > sizeof(iface->if_addr))
+		{
+			flog(LOG_ERR, "address length %d too big for",
+				dl->sdl_alen,
+				iface->Name);
+			goto ret;
+		}
+		
+		memcpy(iface->if_hwaddr, LLADDR(dl), dl->sdl_alen);
+		iface->if_hwaddr_len = dl->sdl_alen << 3;
+
+		switch(dl->sdl_type) {
+		case IFT_ETHER:
+		case IFT_ISO88023:
+			iface->if_prefix_len = 64;
+			break;
+		case IFT_FDDI:
+			iface->if_prefix_len = 64;
+			break;
+		default:
+			iface->if_prefix_len = -1;
+			iface->if_maxmtu = -1;
+			break;
+		}
+
+		dlog(LOG_DEBUG, 3, "link layer token length for %s is %d", iface->Name,
+			iface->if_hwaddr_len);
+
+		dlog(LOG_DEBUG, 3, "prefix length for %s is %d", iface->Name,
+			iface->if_prefix_len);
+
+		if (iface->if_prefix_len != -1) {
+			memset(zero, 0, dl->sdl_alen);
+			if (!memcmp(iface->if_hwaddr, zero, dl->sdl_alen))
+				flog(LOG_WARNING, "WARNING, MAC address on %s is all zero!",
+					iface->Name);
+		}
+		
+		prefix = iface->AdvPrefixList;
+		while (prefix)
+		{
+			if ((iface->if_prefix_len != -1) &&
+				(iface->if_prefix_len != prefix->PrefixLen))
+			{
+				flog(LOG_WARNING, "prefix length should be %d for %s",
+					iface->if_prefix_len, iface->Name);
+			}
+
+			prefix = prefix->next;
+		}
+
+		freeifaddrs(addresses);
+		return 0;
+	}
+
 
 ret:
 	iface->if_maxmtu = -1;
 	iface->if_hwaddr_len = -1;
 	iface->if_prefix_len = -1;
-	free(ifconf.ifc_buf);
+	freeifaddrs(addresses);
 	return -1;
 }
 
